minor changes for SEO

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
             his background, his skills and his contact details over internet." />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Mukul Taneja" />
-    <meta http-equiv="cache-control" content="max-age=86400" />
     <meta property="og:url" content="https://mukultaneja.github.io" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Mukul Taneja" />
@@ -25,7 +24,7 @@
     <div id="wrapper">
         <div class="overlay"></div>
         <!-- sidebar -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper">
             <ul class="nav sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">Me</a>
@@ -81,12 +80,12 @@
                     <hr />
                 </div>
                 <div class="col-md-12 col-xs-12" style="padding-top: 30px">
-                    <center>
-                        <img src="static/images/mukul.png" alt="mukul" class="me img-responsive" />
+                    <figure class="figure">
+                        <img src="static/images/mukul.png" alt="mukul taneja" class="me img-responsive" />
                         <figcaption class="figure-caption tag-class">
                             <b>Senior Data Specialist, Gramener</b>
                         </figcaption>
-                    </center>
+                    </figure>
                 </div>
             </div>
             <!-- home section of main page-->
@@ -165,24 +164,24 @@
                 </div>
                 <div class="col-md-12 col-xs-12 rewards-div">
                     <div class="col-md-3 col-xs-3">
-                        <a href="https://speakerdeck.com/mukultaneja/big-data-visualization" target="_blank.html">
-                                <img src="static/images/data-visualization-talk.png" class="talk-images" />
+                        <a href="https://speakerdeck.com/mukultaneja/big-data-visualization" target="blank.html">
+                                <img src="static/images/data-visualization-talk.png" class="talk-images" alt="Talk on Big Data & Visualization"/>
                                 <figcaption class="caption">
                                     Big Data And Data Visualization
                                 </figcaption>
                             </a>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <a href="public/cdac-training/presentation.html" target="_blank.html">
-                                <img src="static/images/cdac-presentation.png" class="talk-images" />
+                        <a href="public/cdac-training/presentation.html" target="blank.html">
+                                <img src="static/images/cdac-presentation.png" class="talk-images" alt="Lecture Slides on D3.js />
                                 <figcaption class="caption">
                                     CDAC - D3 Traning Presentation
                                 </figcaption>
                             </a>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <a href="https://www.hackerearth.com/year-in-review/2016/mac.thecreator/share/295f68e5916b/" target="_blank.html">
-                                <img src="static/images/hacker-earth-review.png" class="talk-images" />
+                        <a href="https://www.hackerearth.com/year-in-review/2016/mac.thecreator/share/295f68e5916b/" target="blank.html">
+                                <img src="static/images/hacker-earth-review.png" class="talk-images" alt="Hacker Earth Year Reviews"/>
                                 <figcaption class="caption">
                                     Hacker Earth Year Review - 2016
                                 </figcaption>
@@ -206,76 +205,64 @@
                 </div>
                 <div class="col-md-12 col-xs-12 contact-me-text">
                     <div class="col-md-2 col-xs-2 facebook">
-                        <center>
-                            <figure class="figure">
-                                <a href="https://www.facebook.com/Mac.theCreator" target="_blank">
-                                        <img src="static/images/facebook-icon.png" alt="facebook-icon" class="img-rounded img-responsive" />
-                                    </a>
-                                <figcaption class="figure-caption social-class">
-                                    Facebook
-                                </figcaption>
-                            </figure>
-                        </center>
+                        <figure class="figure">
+                            <a href="https://www.facebook.com/Mac.theCreator" target="_blank">
+                                    <img src="static/images/facebook-icon.png" alt="facebook-icon" class="img-rounded img-responsive" />
+                                </a>
+                            <figcaption class="figure-caption social-class">
+                                Facebook
+                            </figcaption>
+                        </figure>
                     </div>
                     <div class="col-md-2 col-xs-2 linkedin">
-                        <center>
-                            <figure class="figure">
-                                <a href="https://in.linkedin.com/in/mukultaneja" target="_blank">
-                                        <img src="static/images/linkedin-icon.png" alt="linkedin-icon" class="img-rounded img-responsive" />
-                                    </a>
-                                <figcaption class="figure-caption social-class">
-                                    Linkedin
-                                </figcaption>
-                            </figure>
-                        </center>
+                        <figure class="figure">
+                            <a href="https://in.linkedin.com/in/mukultaneja" target="_blank">
+                                    <img src="static/images/linkedin-icon.png" alt="linkedin-icon" class="img-rounded img-responsive" />
+                                </a>
+                            <figcaption class="figure-caption social-class">
+                                Linkedin
+                            </figcaption>
+                        </figure>
                     </div>
                     <div class="col-md-2 col-xs-2 gmail">
-                        <center>
-                            <figure class="figure">
-                                <a href="mailto:mukultaneja91@gmail.com">
-                                        <img src="static/images/mail-icon.png" alt="gmail-icon" class="img-rounded img-responsive" />
-                                    </a>
-                                <figcaption class="figure-caption social-class">
-                                    Gmail
-                                </figcaption>
-                            </figure>
-                        </center>
+                        <figure class="figure">
+                            <a href="mailto:mukultaneja91@gmail.com">
+                                    <img src="static/images/mail-icon.png" alt="gmail-icon" class="img-rounded img-responsive" />
+                                </a>
+                            <figcaption class="figure-caption social-class">
+                                Gmail
+                            </figcaption>
+                        </figure>
                     </div>
                     <div class="col-md-2 col-xs-2 twitter">
-                        <center>
-                            <figure class="figure">
-                                <a href="https://twitter.com/thecuriousmukul" target="_blank">
-                                        <img src="static/images/twitter-icon.png" alt="twitter-icon" class="img-rounded img-responsive" />
-                                    </a>
-                                <figcaption class="figure-caption social-class">
-                                    Twitter
-                                </figcaption>
-                            </figure>
-                        </center>
+                        <figure class="figure">
+                            <a href="https://twitter.com/thecuriousmukul" target="_blank">
+                                    <img src="static/images/twitter-icon.png" alt="twitter-icon" class="img-rounded img-responsive" />
+                                </a>
+                            <figcaption class="figure-caption social-class">
+                                Twitter
+                            </figcaption>
+                        </figure>
                     </div>
                     <div class="col-md-2 col-xs-2 github">
-                        <center>
-                            <figure class="figure">
-                                <a href="https://github.com/mukultaneja" target="_blank">
-                                        <img src="static/images/github-icon.png" alt="github-icon" class="img-rounded img-responsive" />
-                                    </a>
-                                <figcaption class="figure-caption social-class">
-                                    Github
-                                </figcaption>
-                            </figure>
-                        </center>
+                        <figure class="figure">
+                            <a href="https://github.com/mukultaneja" target="_blank">
+                                    <img src="static/images/github-icon.png" alt="github-icon" class="img-rounded img-responsive" />
+                                </a>
+                            <figcaption class="figure-caption social-class">
+                                Github
+                            </figcaption>
+                        </figure>
                     </div>
                     <div class="col-md-2 col-xs-2 hackerearth">
-                        <center>
-                            <figure class="figure">
-                                <a href="http://www.hackerearth.com/@mac.thecreator" target="_blank">
-                                        <img src="static/images/hacker-earth-icon.png" alt="github-icon" class="img-rounded img-responsive" />
-                                    </a>
-                                <figcaption class="figure-caption social-class">
-                                    Hacker Earth
-                                </figcaption>
-                            </figure>
-                        </center>
+                        <figure class="figure">
+                            <a href="http://www.hackerearth.com/@mac.thecreator" target="_blank">
+                                    <img src="static/images/hacker-earth-icon.png" alt="github-icon" class="img-rounded img-responsive" />
+                                </a>
+                            <figcaption class="figure-caption social-class">
+                                Hacker Earth
+                            </figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
