--- a/blogs.html
+++ b/blogs.html
@@ -2,11 +2,10 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="copyright" content="Mukul Taneja Blogs" />
-        <meta name="description" content="" />
+        <meta name="copyright" content="Mukul Taneja" />
+        <meta name="description" content="Listed blogs by Mukul Taneja" />
         <meta name="robots" content="index, follow" />
         <meta name="author" content="Mukul Taneja" />
-        <meta http-equiv="cache-control" content="max-age=86400" />
         <link rel="shortcut icon" href="static/images/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
