minor changes for SEO

--- a/index.html
+++ b/index.html
@@ -164,28 +164,34 @@
                 </div>
                 <div class="col-md-12 col-xs-12 rewards-div">
                     <div class="col-md-3 col-xs-3">
-                        <a href="https://speakerdeck.com/mukultaneja/big-data-visualization" target="blank.html">
+                        <figure class="figure">
+                            <a href="https://speakerdeck.com/mukultaneja/big-data-visualization" target="blank.html">
                                 <img src="static/images/data-visualization-talk.png" class="talk-images" alt="Talk on Big Data & Visualization"/>
                                 <figcaption class="caption">
                                     Big Data And Data Visualization
                                 </figcaption>
                             </a>
+                        </figure>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <a href="public/cdac-training/presentation.html" target="blank.html">
-                                <img src="static/images/cdac-presentation.png" class="talk-images" alt="Lecture Slides on D3.js />
+                        <figure class="figure">
+                            <a href="public/cdac-training/presentation.html" target="blank.html">
+                                <img src="static/images/cdac-presentation.png" class="talk-images" alt="Lecture Slides on D3.js" />
                                 <figcaption class="caption">
                                     CDAC - D3 Traning Presentation
                                 </figcaption>
                             </a>
+                        </figure>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <a href="https://www.hackerearth.com/year-in-review/2016/mac.thecreator/share/295f68e5916b/" target="blank.html">
+                        <figure class="figure">
+                            <a href="https://www.hackerearth.com/year-in-review/2016/mac.thecreator/share/295f68e5916b/" target="blank.html">
                                 <img src="static/images/hacker-earth-review.png" class="talk-images" alt="Hacker Earth Year Reviews"/>
                                 <figcaption class="caption">
                                     Hacker Earth Year Review - 2016
                                 </figcaption>
                             </a>
+                        </figure>
                     </div>
                 </div>
             </div>
