--- a/analysis/github-repos/index.html
+++ b/analysis/github-repos/index.html
@@ -1,50 +1,54 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Top 10 Most Popular Languages For Open Source Projects</title>
-	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-	    <link href="static/css/style.css" rel="stylesheet" />
-	</head>
-	<body>
-	    <div class="row page-header">
-	    	<div class="col-md-3 col-xs-3 last-updated-data">
-	    		<h5 style="margin-top: 24px; margin-left: 18px"></h5>
-	    	</div>
-	        <div class="col-md-6 col-xs-6">
-	            <h3 class="text-center">Top 10 Most Popular Languages For Open Source Projects</h3>
-	        </div>
-	        <div class="col-md-3 col-xs-3">
-	        	<h5 style="margin-top: 24px; margin-left: 32px">frequency - crawls 100 times per day</h5>
-	        </div>
-	    </div>
-	    <div class="row">
-	    	<div class="col-md-12 col-xs-12 top-langs"></div>
-	    </div>
-	    <div class="row">
-	        <div class="col-md-12 col-xs-12 repovis"></div>
-	    </div>
-	    <div class="overlay" style="display: block">
-        	<img src="static/images/ajax-loader.gif" style="margin-left: 39%; margin-top: 10%" />
-    	</div>
-    	<!-- footer section of web page -->
-        <div class="container footer">
-            <footer class="text-center"></footer>
+
+<head>
+    <title>Top 10 Most Popular Languages For Open Source Projects</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="static/css/style.css" rel="stylesheet" />
+</head>
+
+<body>
+    <div class="row page-header">
+        <div class="col-md-3 col-xs-3 last-updated-data">
+            <h5 style="margin-top: 24px; margin-left: 18px"></h5>
         </div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.0/d3.min.js"></script>
-	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-	    <script type="text/javascript" src="static/js/repos.js"></script>
-	    <script type="text/javascript">
-	    	$('document').ready(function(){
-	    		var date = new Date(),
-	    			day = date.getDate(),
-	    			month = date.getMonth() + 1,
-	    			year = date.getFullYear(),
-	    			textDate = day + '/' + month + '/' + year + ' 00:00:00 AM';
-	    		$('div.footer footer').html('&copy; Mukul Taneja - ' + year);
-	    		$('.last-updated-data h5').text('last updated data - ' + textDate);
-	    	});
-	    </script>
-	</body>
+        <div class="col-md-6 col-xs-6">
+            <h3 class="text-center">Top 10 Most Popular Languages For Open Source Projects</h3>
+        </div>
+        <div class="col-md-3 col-xs-3">
+            <h5 style="margin-top: 24px; margin-left: 32px">frequency - crawls 100 times per day</h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 col-xs-12 top-langs"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 col-xs-12 repovis"></div>
+    </div>
+    <div class="overlay" style="display: block">
+        <img src="static/images/ajax-loader.gif" style="margin-left: 39%; margin-top: 10%" />
+    </div>
+    <!-- footer section of web page -->
+    <div class="container footer">
+        <footer class="text-center"></footer>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.0/d3.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+    <script type="text/javascript" src="static/js/repos.js"></script>
+    <script type="text/javascript">
+    $('document').ready(function() {
+        var date = new Date(),
+            day = date.getDate(),
+            month = date.getMonth() + 1,
+            year = date.getFullYear(),
+            textDate = day + '/' + month + '/' + year + ' 00:00:00 AM';
+        $('div.footer footer').html('&copy; Mukul Taneja - ' + year);
+        $('.last-updated-data h5').text('last updated data - ' + textDate);
+    });
+    </script>
+</body>
+
 </html>
