adding talk on index page

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="col-md-3 col-xs-3">
                         <figure class="figure">
-                            <a href="public/cdac-training/presentation.html" target="blank.html">
+                            <a href="talks/cdac-training/presentation.html" target="blank.html">
                                 <img src="static/images/cdac-presentation.png" class="talk-images" alt="Lecture Slides on D3.js" />
                             </a>
                             <figcaption class="caption">
@@ -190,6 +190,16 @@
                             </a>
                             <figcaption class="caption">
                                 Hacker Earth Year Review - 2016
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-3 col-xs-3">
+                        <figure class="figure">
+                            <a href="talks/analytic-summit-2017/presentation.html" target="blank.html">
+                                <img src="static/images/analytic-summit-2017" class="talk-images" alt="Analytic Summit 2017" />
+                            </a>
+                            <figcaption class="caption">
+                                Indian Analytic Summit - 2017
                             </figcaption>
                         </figure>
                     </div>
