--- a/index.html
+++ b/index.html
@@ -287,6 +287,27 @@
                         </figure>
                     </div>
                 </div>
+                <div class="row p-4">
+                    <div class="col-7">
+                        <form name="contact-me" action="mailto:mukultaneja91@gmail.com">
+                            <div class="form-group">
+                                <label for="email">Email address:</label>
+                                <input type="email" class="form-control" id="email" placeholder="mukultaneja91@gmail.com" readonly="readonly">
+                            </div>
+                            <div class="form-group">
+                                <label for="subject">Subject:</label>
+                                <input type="text" class="form-control" id="subject">
+                            </div>
+                            <div class="form-group">
+                              <label for="message">Message:</label>
+                              <textarea class="form-control" rows="5" id="message"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary submit">Submit</button>
+                        </form>
+                    </div>
+                    <div class="col-5">
+                    </div>
+                </div>
             </div>
             <!-- back to top anchor button to drift window to top -->
             <button type="button" class="back-to-top btn btn-default" aria-label="Top Arrow">
