--- a/blogs.html
+++ b/blogs.html
@@ -1,62 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="copyright" content="Mukul Taneja" />
-        <meta name="description" content="Listed blogs by Mukul Taneja" />
-        <meta name="robots" content="index, follow" />
-        <meta name="author" content="Mukul Taneja" />
         <link rel="shortcut icon" href="static/images/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="static/css/bootstrap.min.css" />
         <link rel="stylesheet" href="static/css/style.css" />
 		<title> Mukul Taneja's Blogs </title>
+        {% seo %}
 	</head>
 	<body>
-        <!-- Page Content -->
-        <div class="page-content-wrapper">
-    		<div class="container header">
-    			<div class="col-md-12 col-xs-12">
-                    <h2 class="text-center">Mukul Taneja - Blogs</h2>
-                    <hr />
+		<div class="container-fluid">
+            <div class="row mt-2 p-2">
+                <div class="col-5">
+                    <nav class="navbar navbar-expand-lg">
+                        <div class="collapse navbar-collapse">
+                            <ul class="navbar-nav w-100">
+                                <li class="nav-item w-25 text-center">
+                                    <a href="/index.html">
+                                        <span class="font-weight-bold">Home</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
                 </div>
-    		</div>
-            <div class="container">
-                <div class="col-md-12 years">
+    			<div class="col-7">
+                    <h2>Mukul Taneja - Blogs</h2>
+                </div>
+            </div>
+		</div>
+        <hr />
+        <div class="container blog-content">
+            <div class="row p-3">
+                <div class="col-12 years">
                     <h3>2017</h3>
                 </div>
-                <hr />
-    			<div class="col-md-12 col-xs-12 blog-link">
+            </div>
+            <div class="row">
+    			<div class="col-12 blog-link">
                     <a href="https://www.kaggle.com/mukultaneja/analysis-student-alcohol-consumption" target="_blank.html">
                         Analysis - Student Alcohol Consumption
                     </a>
                 </div>
-                <div class="col-md-12 col-xs-12 blog-link">
+                <div class="col-12 blog-link">
                     <a href="https://www.kaggle.com/mukultaneja/mcdonald-s-food-analysis" target="_blank.html">
                         Analysis - Mcdonald's Food
                     </a>
                 </div>
-                <div class="col-md-12 col-xs-12 blog-link">
+                <div class="col-12 blog-link">
                     <a href="https://www.kaggle.com/mukultaneja/which-is-most-popular-harvardx-or-mit" target="_blank.html">
                         Analysis - Online Courses from Harvard and MIT
                     </a>
                 </div>
-                <div class="col-md-12 col-xs-12 blog-link">
+                <div class="col-12 blog-link">
                     <a href="https://medium.com/@mukultaneja/automated-job-performing-queue-system-using-python-a7e94e4e3526" target="_blank.html">
                         Article - Automated Job Performing Queue System
                     </a>
                 </div>
-                <div class="col-md-12 col-xs-12 blog-link">
+                <div class="col-12 blog-link">
                     <a href="https://medium.com/@mukultaneja/which-is-the-most-popular-university-harvard-or-mit-53b6a5677d34" target="_blank.html">
                         Article - Online Courses from Harvard and MIT
                     </a>
                 </div>
-                <div class="col-md-12 col-xs-12 blog-link">
+                <div class="col-12 blog-link">
                     <a href="https://mukultaneja.github.io/analysis/github-repos/" target="_blank.html">
                         Top 10 Most Popular Languages For Open Source Projects
                     </a>
                 </div>
-    		</div>
+            </div>
+		</div>
+        <!-- footer section of web page -->
+        <div class="container footer">
+            <footer class="text-center">
+            </footer>
         </div>
+        <script type="text/javascript" src="static/js/jquery.min.js"></script>
+        <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="static/js/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="static/js/d3.min.js"></script>
+        <script type="text/javascript" src="static/js/script.js"></script>
+        <script type="text/javascript" src="static/js/vis.js"></script>
 	</body>
 </html>
