--- a/index.html
+++ b/index.html
@@ -17,21 +17,8 @@
     <div id="wrapper">
         <div class="page-content-wrapper">
             <div class="container-fluid header p-4">
-                <div class="row p-1">
+                <div class="row">
                     <div class="col-6">
-                        <nav class="navbar navbar-expand-lg">
-                            <div class="collapse navbar-collapse">
-                                <ul class="navbar-nav w-100">
-                                    <li class="nav-item w-25 text-center">
-                                        <a href="/">
-                                            <span class="font-weight-bold">Home</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
-                    </div>
-                    <div class="col">
                         <nav class="navbar navbar-expand-lg">
                             <div class="collapse navbar-collapse">
                                 <ul class="navbar-nav w-100">
@@ -45,6 +32,14 @@
                                             <span class="font-weight-bold">skills</span>
                                         </a>
                                     </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                    <div class="col">
+                        <nav class="navbar navbar-expand-lg">
+                            <div class="collapse navbar-collapse">
+                                <ul class="navbar-nav w-100">
                                     <li class="nav-item w-25 text-center">
                                         <a href="#rewards" class="rewards-link">
                                             <span class="font-weight-bold">activities</span>
@@ -140,7 +135,7 @@
                     </div>
                     <div class="col-4">
                         <figure class="figure">
-                            <img src="static/images/mukul.jpg" alt="mukul taneja" class="me img-responsive" />
+                            <img src="static/images/mukul.jpg" alt="mukul taneja" class="me img-responsive w-100"/>
                         </figure>
                     </div>
                 </div>
@@ -176,13 +171,13 @@
                     <div class="text-center col-12 mt-4 p-4">
                         <div class="row">
                             <div class="col-6">
-                                <img src="static/images/study.jpg" height=400 width=620 />
+                                <img src="static/images/study.jpg" class="w-75 h-75" />
                                 <figcaption class="text-center mt-2">
                                     I believe!
                                 </figcaption>
                             </div>
                             <div class="col-6">
-                                <img src="static/images/hobbies.gif" height=400 width=620 />
+                                <img src="static/images/hobbies.gif" class="w-75 h-75"/>
                                 <figcaption class="text-center mt-2">
                                     My Hobbies
                                     <br />
@@ -323,8 +318,8 @@
                             <a class="btn btn-primary submit" href="mailto:mukultaneja91@gmail.com" role="button">Send Mail</a>
                         </form>
                     </div>
-                    <div class="col-5 p-4 mt-2">
-                        <img src="static/images/contactme.gif" width="600" height="350" />
+                    <div class="col-5 p-4 mt-4">
+                        <img src="static/images/contactme.gif" class="mt-2 w-100 h-75" />
                     </div>
                 </div>
             </div>
