WIP - making page responsive

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <hr />
                 <div class="row p-4 mt-4">
                     <div class="col-8 mt-4 p-4">
-                        <div class="col-12 h-50">
+                        <div class="col-12 h-50 intro">
                             <div class="mt-1 p-3">
                                 <h2 class="typewriter">
                                 Hi, Welcome to my page!
