--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <div class="col">
                         <div class="contact-me-heading">
                             <h2 class="text-center">
-                                Contact Me
+                                contact me
                             </h2>
                         </div>
                     </div>
