adding support for 768px/980px/1080px/1360px/1680px

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <div class="page-content-wrapper">
             <div class="container-fluid header p-4">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 first">
                         <nav class="navbar navbar-expand-lg">
                             <div class="collapse navbar-collapse">
                                 <ul class="navbar-nav w-100">
-                                    <li class="nav-item w-25 text-center">
+                                    <li class="nav-item w-50 text-center">
                                         <a href="#about-me" class="about-me-link">
                                             <span class="font-weight-bold">aboutMe</span>
                                         </a>
                                     </li>
-                                    <li class="nav-item w-25 text-center">
+                                    <li class="nav-item w-50 text-center">
                                         <a href="#skills" class="skills-link">
                                             <span class="font-weight-bold">skills</span>
                                         </a>
@@ -36,7 +36,7 @@
                             </div>
                         </nav>
                     </div>
-                    <div class="col">
+                    <div class="col second">
                         <nav class="navbar navbar-expand-lg">
                             <div class="collapse navbar-collapse">
                                 <ul class="navbar-nav w-100">
@@ -67,8 +67,8 @@
                 </div>
                 <hr />
                 <div class="row p-4 mt-4">
-                    <div class="col-8 mt-4 p-4">
-                        <div class="col-12 h-50 intro">
+                    <div class="col-8 mt-4 p-4 intro">
+                        <div class="col-12 h-50">
                             <div class="mt-1 p-3">
                                 <h2 class="typewriter">
                                 Hi, Welcome to my page!
@@ -89,42 +89,42 @@
                             <h4 class="typewriter-3 d-none">Let's Connect forever!</h4>
                             <div class="row mt-4 p-4">
                                 <div class="col-2">
-                                    <figure class="figure mt-4 p-4 icons d-none">
+                                    <figure class="figure mt-4 icons d-none">
                                         <a href="https://www.facebook.com/Mac.theCreator" target="_blank">
                                             <img src="static/images/fb30x30.jpg" alt="facebook-icon" />
                                         </a>
                                     </figure>
                                 </div>
                                 <div class="col-2">
-                                    <figure class="figure mt-4 p-4 icons d-none"">
+                                    <figure class="figure mt-4 icons d-none"">
                                         <a href="https://in.linkedin.com/in/mukultaneja" target="_blank">
                                                 <img src="static/images/linkedin_icon30x30.jpg" alt="linkedin-icon" />
                                             </a>
                                     </figure>
                                 </div>
                                 <div class="col-2">
-                                    <figure class="figure mt-4 p-4 icons d-none"">
+                                    <figure class="figure mt-4 icons d-none"">
                                         <a href="#contact-me" class="contact-me-link">
                                                 <img src="static/images/mail_icon30x30.jpg" alt="gmail-icon"/>
                                             </a>
                                     </figure>
                                 </div>
                                 <div class="col-2">
-                                    <figure class="figure mt-4 p-4 icons d-none"">
+                                    <figure class="figure mt-4 icons d-none"">
                                         <a href="https://twitter.com/thecuriousmukul" target="_blank">
                                                 <img src="static/images/twitter_icon30x30.jpg" alt="twitter-icon"/>
                                             </a>
                                     </figure>
                                 </div>
                                 <div class="col-2">
-                                    <figure class="figure mt-4 p-4 icons d-none"">
+                                    <figure class="figure mt-4 icons d-none"">
                                         <a href="https://github.com/mukultaneja" target="_blank">
                                                 <img src="static/images/github30x30.jpg" alt="github-icon"/>
                                             </a>
                                     </figure>
                                 </div>
                                 <div class="col-2">
-                                    <figure class="figure mt-4 p-4 icons d-none"">
+                                    <figure class="figure mt-4 icons d-none"">
                                         <a href="http://www.hackerearth.com/@mac.thecreator" target="_blank">
                                                 <img src="static/images/hacker_earth30x30.jpg" alt="github-icon" />
                                             </a>
@@ -134,8 +134,8 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <figure class="figure">
-                            <img src="static/images/mukul.jpg" alt="mukul taneja" class="me img-responsive w-100"/>
+                        <figure class="figure h-100 w-100">
+                            <img src="static/images/mukul.jpg" alt="mukul taneja" class="me img-responsive w-100 h-100"/>
                         </figure>
                     </div>
                 </div>
