updating d3-tip js src in github-repos

--- a/analysis/github-repos/index.html
+++ b/analysis/github-repos/index.html
@@ -34,7 +34,7 @@
     </div>
     <script type="text/javascript" src="../../static/js/jquery.min.js"></script>
     <script type="text/javascript" src="../../static/js/d3.min.js"></script>
-    <script type="text/javascript" src="../../static/d3-tip.min.js"></script>
+    <script type="text/javascript" src="../../static/js/d3-tip.min.js"></script>
     <script type="text/javascript" src="static/js/repos.js"></script>
     <script type="text/javascript">
     $('document').ready(function() {
