--- a/blogs.html
+++ b/blogs.html
@@ -32,6 +32,20 @@
         <div class="container blog-content">
             <div class="row p-3">
                 <div class="col-12 years">
+                    <h3>2018</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 blog-link">
+                    <a href="https://www.linkedin.com/pulse/youtubedownloader-mukul-taneja/" target="_blank">
+                        YoutubeDownloader
+                    </a>
+                    - An automated service to download multiple youtube videos at a time.
+                </div>
+            </div>
+            <hr />
+            <div class="row p-3">
+                <div class="col-12 years">
                     <h3>2017</h3>
                 </div>
             </div>
