--- a/analysis/github-repos/index.html
+++ b/analysis/github-repos/index.html
@@ -12,9 +12,11 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <!--div class="col-3"></div-->
-            <div class="col-12 mt-4">
-                <h3 class="text-center">Top 10 Most Popular Languages For Open Source Projects</h3>
+            <div class="col-2">
+                <p class="pt-4 pl-4">Data untill 17th Feb 2018</p>
+            </div>
+            <div class="col-10 mt-4">
+                <h3>Top 10 Most Popular Languages For Open Source Projects</h3>
             </div>
             <!--div class="col-3"></div-->
         </div>
