--- a/blogs/index.html
+++ b/blogs/index.html
@@ -1,4 +1,7 @@
---- layout: default title: Mukul Taneja's Blog ---
+---
+ layout: default
+ title: Mukul Taneja's Blog
+---
 <div class="container-fluid">
     <div class="row mt-2 p-2">
         <div class="col-5">
