Updated: Blog Page

--- a/analysis/github-repos/index.html
+++ b/analysis/github-repos/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-2">
+            <div class="col-4">
                 <p class="pt-4 pl-4">Data untill 17th Feb 2018</p>
             </div>
-            <div class="col-10 mt-4">
+            <div class="col-8 mt-4 text-center">
                 <h3>Top 10 Most Popular Languages For Open Source Projects</h3>
             </div>
             <!--div class="col-3"></div-->
@@ -27,11 +27,10 @@
         <div class="row">
             <div class="col repovis"></div>
         </div>
-    </div>
-    <!-- footer section of web page -->
-    <div class="container-fluid">
-        <div class="footer">
-            <footer class="text-center"></footer>
+        <div class="row">
+            <div class="footer">
+                <footer class="text-center"></footer>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="../../static/js/jquery.min.js"></script>
