--- a/events/index.html
+++ b/events/index.html
@@ -1,9 +1,262 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="css/index.css" />
-        <script src="js/index.js"></script>
-    </head>
-    <body>
-        Welcome to My events website
-    </body>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/index.css" />
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row w-100">
+            <div class="col-md-6">
+                <h2 class="pt-5 px-5">Event Management Company</h2>
+            </div>
+            <div class="col-md-6 float-right ">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="collapse navbar-collapse pt-5" id="navbarSupportedContent ">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
+                            <li class="nav-item w-25">
+                                <a class="nav-link active " aria-current="page " href="# ">Home</a>
+                            </li>
+                            <li class="nav-item w-25">
+                                <a class="nav-link" href="#aboutSection">About Us</a>
+                            </li>
+                            <li class="nav-item w-25">
+                                <a class="nav-link" href="#">Gallery</a>
+                            </li>
+                            <li class="nav-item dropdown w-25">
+                                <a class="nav-link dropdown-toggle" href="#eventSection" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Events</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item " href="#eventSection">Weddings</a></li>
+                                    <li><a class="dropdown-item " href="#eventSection">Birthday Party</a></li>
+                                    <li><a class="dropdown-item " href="#eventSection">Corporate Events</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item w-25">
+                                <a class="nav-link" href="#contactSection">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="container-fluid block-height">
+        <div class="row section-height" id="mainSection"></div>
+        <div class="row">
+            <div class="col-md-1">
+                <button class="carousel-control-prev" type="button" data-mdb-target="#carouselDarkVariant" data-mdb-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+            </div>
+            <div class="col-md-10">
+                <div id="carouselDarkVariant" class="carousel slide carousel-fade carousel-dark" data-mdb-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button data-mdb-target="#carouselDarkVariant" data-mdb-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button data-mdb-target="#carouselDarkVariant" data-mdb-slide-to="1" aria-label="Slide 2"></button>
+                        <button data-mdb-target="#carouselDarkVariant" data-mdb-slide-to="2" aria-label="Slide 3"></button>
+                        <button data-mdb-target="#carouselDarkVariant" data-mdb-slide-to="2" aria-label="Slide 4"></button>
+                    </div>
+                    <div class="carousel-inner px-5">
+                        <div class="carousel-item active">
+                            <img src="img/t1.jpeg" class="d-block w-100" alt="Motorbike Smoke" style="height: 1000px" />
+                        </div>
+
+                        <div class="carousel-item">
+                            <img src="img/t2.jpeg" class="d-block w-100" alt="Mountaintop " style="height: 1000px" />
+                        </div>
+
+                        <div class="carousel-item">
+                            <img src="img/t3.jpeg" class="d-block w-100" alt="Woman Reading a Book " style="height: 1000px" />
+                        </div>
+
+                        <div class="carousel-item">
+                            <img src="img/t4.jpeg" class="d-block w-100" alt="Woman Reading a Book " style="height: 1000px" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <button class="carousel-control-next" type="button" data-mdb-target="#carouselDarkVariant" data-mdb-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class=" container-fluid block-height">
+        <div class="row section-height" id="aboutSection"></div>
+        <div class="row ">
+            <div class="col-md-12 px-5 ">
+                <h2 class="d-flex justify-content-center " style="color: white; background-color: black; height: 100px; padding-top: 28px ">About Us</h2>
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-md-12 d-flex justify-content-left px-5 py-5 ">
+                <p class="col-md-12 pt-2 pl-5 ">
+                    We understand that every couple has a unique vision for their special day, and we are here to make that vision a reality. From small and intimate gatherings to grand and luxurious affairs, we are equipped to handle every aspect of your wedding planning
+                    journey. We turn your dream wedding into a beautiful reality! Our team of experienced and passionate wedding planners understands that your wedding day is one of the most important events in your life, and we are dedicated to making
+                    it unforgettable. We'll take care of all the intricate details, leaving you to focus on enjoying your special day with your loved ones.
+                </p>
+            </div>
+        </div>
+        <div class="row ">
+            <p class="col-md-12 d-flex justify-content-center ">
+                OUR EXPERTISE
+            </p>
+        </div>
+        <br />
+        <div class="row px-5 py-2 ">
+            <div class="col-md-4 ">
+                <figure class="figure ">
+                    <img class="figure-img img-fluid rounded " src="img/decor.jpeg " alt="Decor " />
+                    <figcaption class="figure-caption d-flex justify-content-center " style="font-size: 24px ">Decor</figcaption>
+                </figure>
+            </div>
+            <div class="col-md-4 ">
+                <figure class="figure ">
+                    <img class="figure-img img-fluid rounded " src="img/org.jpeg " alt="Decor " />
+                    <figcaption class="figure-caption d-flex justify-content-center " style="font-size: 24px ">Detailed Organization</figcaption>
+                </figure>
+            </div>
+            <div class="col-md-4 ">
+                <figure class="figure ">
+                    <img class="figure-img img-fluid rounded " src="img/ent.jpeg " alt="Decor " />
+                    <figcaption class="figure-caption d-flex justify-content-center " style="font-size: 24px ">Entertainment</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class=" container-fluid block-height">
+        <div class="row section-height" id="eventSection"></div>
+        <div class="row px-5 ">
+            <div class="col-md-12 h-100 ">
+                <h2 class="d-flex justify-content-center " style="color: white; background-color: black; height: 100px; padding-top: 28px ">Events</h2>
+            </div>
+        </div>
+        <br />
+        <div class="row px-5 py-5 ">
+            <div class="col-md-4 ">
+                <div class="px-5 ">
+                    <div class="d-flex px-4 " style="background-color: white; ">
+                        <figure class="figure py-5 ">
+                            <img class="figure-img img-fluid rounded decor-image" src="img/wedding.jpeg " alt="Decor " />
+                            <figcaption class="figure-caption d-flex justify-content-center " style="font-size: 24px ">Wedding</figcaption>
+                        </figure>
+                    </div>
+                    <div class="d-flex justify-content-center " style="background-color: white; ">
+                        <p class="w-100 px-5 py-3 ">
+                            Trust us to bring your love story to life on your wedding day. We'll make sure your wedding is everything you've ever dreamed of and more.
+                        </p>
+                    </div>
+                    <div class="d-flex justify-content-center py-4 " style="background-color: white; ">
+                        <button type="button " class="btn btn-dark ">Book Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 ">
+                <div class="px-5 ">
+                    <div class="d-flex px-4 " style="background-color: white; ">
+                        <figure class="figure py-5 ">
+                            <img class="figure-img img-fluid rounded " src="img/corporate.jpeg " alt="Corporate " />
+                            <figcaption class="figure-caption d-flex justify-content-center " style="font-size: 24px ">Corporate</figcaption>
+                        </figure>
+                    </div>
+                    <div class="d-flex justify-content-center " style="background-color: white; ">
+                        <p class="w-100 px-5 py-4 ">
+                            From concept to execution, we make your corporate event a success. Leave the planning to us and enjoy a stress-free event that exceeds your expectations.
+                        </p>
+                    </div>
+                    <div class="d-flex justify-content-center py-4 " style="background-color: white; ">
+                        <button type="button " class="btn btn-dark ">Book Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <br />
+    <div class="container-fluid block-height">
+        <div class="row section-height" id="contactSection"></div>
+        <div class="row px-5 ">
+            <div class="col-md-12 ">
+                <h2 class="d-flex justify-content-center " style="color: white; background-color: black; height: 100px; padding-top: 28px ">Contact Us</h2>
+            </div>
+        </div>
+        <br />
+        <div class="row px-5 py-2 ">
+            <div class="col-md-2 pt-5 px-5 ">
+                <address>
+                        <h3>Sydney Office</h3>
+                        <p>
+                            ClickView <br>
+                            Suite 125, Jones Bay Wharf<br>
+                            26-32 Pirrama Road <br>
+                            Pyrmont, NSW 2009
+                        </p>
+                        <p>
+                            <a href="mailto:info@clickview.com.au ">info@clickview.com.au</a><br>
+                            02 9509 2600
+                        </p>
+                    </address>
+            </div>
+            <div class="col-md-6 ">
+                <img class="w-75 " src="img/map.png ">
+            </div>
+            <div class="col-md-4 ">
+                <form class="w-75 ">
+                    <div class="form-group ">
+                        <label for="userName ">Name</label>
+                        <input type="text " class="form-control " id="userName " placeholder="Name ">
+                    </div>
+                    <br />
+                    <div class="form-group ">
+                        <label for="userPhoneNumber ">Phone Number</label>
+                        <input type="text " class="form-control " id="userPhone " placeholder="Phone Number ">
+                    </div>
+                    <br />
+                    <div class="form-group ">
+                        <label for="userEmail ">Email address</label>
+                        <input type="email " class="form-control " id="userEmail " aria-describedby="userEmail " placeholder="Enter email ">
+                    </div>
+                    <br />
+                    <div class="form-group ">
+                        <label for="userEmail ">Event Type</label>
+                        <div class="form-check ">
+                            <input class="form-check-input " type="radio " name="weddingRadio " id="weddingRadio " value="wedding " checked>
+                            <label class="form-check-label " for="weddingRadio ">Wedding</label>
+                        </div>
+                        <div class="form-check ">
+                            <input class="form-check-input " type="radio " name="corpRadio " id="corpRadio " value="corporate ">
+                            <label class="form-check-label " for="corpRadio ">Corporate</label>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="form-group ">
+                        <label for="userQuery ">Message</label>
+                        <textarea class="form-control " id="userQuery " rows="3 "></textarea>
+                    </div>
+                    <br />
+                    <button type="submit " class="btn btn-primary ">Submit</button>
+                </form>
+            </div>
+        </div>
+        <br /><br />
+    </div>
+    <a class="btn btn-primary back-to-top ">
+        <img src="img/uparrow.jpg ">
+    </a>
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous ">
+    </script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js " integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin=" anonymous "></script>
+    <script type="text/javascript " src="./js/index.js "></script>
+</body>
+
 </html>
