--- a/blogs/index.html
+++ b/blogs/index.html
@@ -2,31 +2,17 @@
  layout: default
  title: Mukul Taneja - Blogs
 ---
-<div class="container-fluid p-1">
-    <div class="row mt-5">
-        <div class="col-1"></div>
-        <div class="col-4">
-            <nav class="navbar navbar-expand-lg">
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav w-100">
-                        <li class="nav-item w-25 text-center">
-                            <a href="/">
-                                <span class="font-weight-bold">Home</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h4>Recent Posts</h4>
         </div>
-        <div class="col-5">
-            <h2>Recent Posts</h2>
-        </div>
-        <div class="col-1"></div>
     </div>
-    <hr />
-    <div class="row w-100">
-        <div class="col-3"></div>
-        <div class="col-6 blog-content">
+</div>
+<br /><br />
+<div class="container">
+    <div class="row">
+        <div class="col-12 blog-content">
             <ul>
             {% for post in site.posts %}
             <li>
@@ -42,6 +28,5 @@
             {% endfor %}
             </ul>
         </div>
-        <div class="col-3"></div>
     </div>
 </div>
